--- a/Glyph.Game/Glyph.Game.csproj
+++ b/Glyph.Game/Glyph.Game.csproj
@@ -39,7 +39,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlyphGame.cs" />
+    <Compile Include="IGameMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ModeManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Glyph.Audio\Glyph.Audio.csproj">
