--- a/Glyph.Scripting/Glyph.Scripting.csproj
+++ b/Glyph.Scripting/Glyph.Scripting.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{729CF52C-D06C-42FD-A2EE-6C19E07D185F}</ProjectGuid>
+    <ProjectGuid>{71BD4FA9-4CA8-426B-92D0-D32CF9D40794}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Glyph.Entities</RootNamespace>
-    <AssemblyName>Glyph.Entities</AssemblyName>
+    <RootNamespace>Glyph.Scripting</RootNamespace>
+    <AssemblyName>Glyph.Scripting</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -17,18 +17,17 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;WINDOWS</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Windows|AnyCPU'">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Windows|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Windows\</OutputPath>
     <DefineConstants>TRACE;WINDOWS</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -39,24 +38,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animation.cs" />
-    <Compile Include="AnimSprite.cs" />
-    <Compile Include="Collision.cs" />
-    <Compile Include="FrameSequence.cs" />
-    <Compile Include="GameObject.cs" />
-    <Compile Include="ILayable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ISpace.cs" />
-    <Compile Include="Sprite.cs" />
-    <Compile Include="Zone.cs" />
+    <Compile Include="Script.cs" />
+    <Compile Include="ScriptLine.cs" />
+    <Compile Include="ScriptManager.cs" />
+    <Compile Include="Trigger.cs" />
+    <Compile Include="TriggerManager.cs" />
+    <Compile Include="TriggerZone.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Glyph.Entities\Glyph.Entities.csproj">
+      <Project>{729CF52C-D06C-42FD-A2EE-6C19E07D185F}</Project>
+      <Name>Glyph.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.Localization\Glyph.Localization.csproj">
+      <Project>{1F7A7855-3E63-45CD-907A-D23AA61A02D2}</Project>
+      <Name>Glyph.Localization</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Glyph.Xml\Glyph.Xml.csproj">
       <Project>{3CDC6986-8651-4080-99D6-CC0DEAFDF6AE}</Project>
       <Name>Glyph.Xml</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
-      <Project>{457cbbf3-26c7-478b-b4eb-1f85ff3c07f5}</Project>
+      <Project>{457CBBF3-26C7-478B-B4EB-1F85FF3C07F5}</Project>
       <Name>Glyph</Name>
     </ProjectReference>
   </ItemGroup>
