--- a/Glyph.Audio/Glyph.Audio.csproj
+++ b/Glyph.Audio/Glyph.Audio.csproj
@@ -43,9 +43,13 @@
     <Compile Include="SoundCollection.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Glyph.Application\Glyph.Application.csproj">
-      <Project>{E0970AE4-8303-45CC-AB56-E2B8BB56332B}</Project>
-      <Name>Glyph.Application</Name>
+    <ProjectReference Include="..\External\Diese\Diese.Debug\Diese.Debug.csproj">
+      <Project>{CF81F12F-4EFA-4A26-9853-DF86973533CE}</Project>
+      <Name>Diese.Debug</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.Debug\Glyph.Debug.csproj">
+      <Project>{010B6D8D-A0B0-4E8C-A923-A08BBF891A76}</Project>
+      <Name>Glyph.Debug</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
       <Project>{457CBBF3-26C7-478B-B4EB-1F85FF3C07F5}</Project>
