--- a/Glyph.Scripting/Glyph.Scripting.csproj
+++ b/Glyph.Scripting/Glyph.Scripting.csproj
@@ -38,6 +38,9 @@
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="NLua">
       <HintPath>..\..\..\packages\NLua.1.3.2.1\lib\net45\NLua.dll</HintPath>
     </Reference>
@@ -60,10 +63,6 @@
     <ProjectReference Include="..\External\Diese\Diese.Lua\Diese.Lua.csproj">
       <Project>{e2707575-12c2-4ce6-b8e4-e7efd8d4e301}</Project>
       <Name>Diese.Lua</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Glyph.Debug\Glyph.Debug.csproj">
-      <Project>{010B6D8D-A0B0-4E8C-A923-A08BBF891A76}</Project>
-      <Name>Glyph.Debug</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph.Entities\Glyph.Entities.csproj">
       <Project>{729CF52C-D06C-42FD-A2EE-6C19E07D185F}</Project>
