--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -37,6 +37,9 @@
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
@@ -75,10 +78,6 @@
     <ProjectReference Include="..\External\Diese\Diese.Debug\Diese.Debug.csproj">
       <Project>{cf81f12f-4efa-4a26-9853-df86973533ce}</Project>
       <Name>Diese.Debug</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Glyph.Debug\Glyph.Debug.csproj">
-      <Project>{010b6d8d-a0b0-4e8c-a923-a08bbf891a76}</Project>
-      <Name>Glyph.Debug</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
