--- a/Glyph.Input/Glyph.Input.csproj
+++ b/Glyph.Input/Glyph.Input.csproj
@@ -51,9 +51,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Glyph.Xml\Glyph.Xml.csproj">
-      <Project>{3CDC6986-8651-4080-99D6-CC0DEAFDF6AE}</Project>
-      <Name>Glyph.Xml</Name>
+    <ProjectReference Include="..\External\Diese\Diese.Serialization\Diese.Serialization.csproj">
+      <Project>{4AE2D764-4161-453D-8B2D-BD66607EC27A}</Project>
+      <Name>Diese.Serialization</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
       <Project>{457CBBF3-26C7-478B-B4EB-1F85FF3C07F5}</Project>
