--- a/Glyph.UI/Glyph.UI.csproj
+++ b/Glyph.UI/Glyph.UI.csproj
@@ -49,6 +49,10 @@
     <Compile Include="TextSprite.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\External\Diese\Diese.Serialization\Diese.Serialization.csproj">
+      <Project>{4AE2D764-4161-453D-8B2D-BD66607EC27A}</Project>
+      <Name>Diese.Serialization</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Glyph.Entities\Glyph.Entities.csproj">
       <Project>{729CF52C-D06C-42FD-A2EE-6C19E07D185F}</Project>
       <Name>Glyph.Entities</Name>
@@ -56,10 +60,6 @@
     <ProjectReference Include="..\Glyph.Input\Glyph.Input.csproj">
       <Project>{C0D6FD93-B1EB-4877-8125-A69BC3C2795A}</Project>
       <Name>Glyph.Input</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Glyph.Xml\Glyph.Xml.csproj">
-      <Project>{3CDC6986-8651-4080-99D6-CC0DEAFDF6AE}</Project>
-      <Name>Glyph.Xml</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
       <Project>{457CBBF3-26C7-478B-B4EB-1F85FF3C07F5}</Project>
