--- a/Glyph.Input/Glyph.Input.csproj
+++ b/Glyph.Input/Glyph.Input.csproj
@@ -48,6 +48,10 @@
     <Compile Include="Handlers\Axis\ThumbStick.cs" />
     <Compile Include="Handlers\Axis\Trigger.cs" />
     <Compile Include="Handlers\Buttons\ButtonHandler.cs" />
+    <Compile Include="Handlers\Surfaces\Cursors\CursorHandler.cs" />
+    <Compile Include="Handlers\Surfaces\SurfaceHandler.cs" />
+    <Compile Include="Handlers\Surfaces\Cursors\CursorSpace.cs" />
+    <Compile Include="Handlers\Surfaces\Cursors\MouseCursorHandler.cs" />
     <Compile Include="InputAction.cs" />
     <Compile Include="Handlers\Buttons\KeyHandler.cs" />
     <Compile Include="Handlers\Buttons\MouseButtonHandler.cs" />
@@ -67,6 +71,7 @@
     <Compile Include="InputManager.cs" />
     <Compile Include="StandardInputs\MenuInputs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StandardInputs\MouseInputs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\External\Diese\Diese.Serialization\Diese.Serialization.csproj">
