Add InputStates and VectorHandler + refactor

--- a/Glyph.Input/Glyph.Input.csproj
+++ b/Glyph.Input/Glyph.Input.csproj
@@ -44,18 +44,19 @@
     <Compile Include="Handlers\Axis\AxisHandler.cs" />
     <Compile Include="Handlers\Axis\MouseWheelHandler.cs" />
     <Compile Include="Handlers\Axis\PadTriggerHandler.cs" />
-    <Compile Include="Handlers\Axis\ThumbStickHandler.cs" />
-    <Compile Include="Handlers\Axis\ThumbStick.cs" />
-    <Compile Include="Handlers\Axis\Trigger.cs" />
+    <Compile Include="Handlers\Axis\ThumbStickAxisHandler.cs" />
+    <Compile Include="Handlers\Vectors\ThumbStickVectorHandler.cs" />
+    <Compile Include="ThumbStick.cs" />
+    <Compile Include="Trigger.cs" />
     <Compile Include="Handlers\Buttons\ButtonHandler.cs" />
-    <Compile Include="Handlers\Surfaces\Cursors\CursorHandler.cs" />
-    <Compile Include="Handlers\Surfaces\SurfaceHandler.cs" />
-    <Compile Include="Handlers\Surfaces\Cursors\CursorSpace.cs" />
-    <Compile Include="Handlers\Surfaces\Cursors\MouseCursorHandler.cs" />
+    <Compile Include="Handlers\Cursors\CursorHandler.cs" />
+    <Compile Include="Handlers\Cursors\CursorSpace.cs" />
+    <Compile Include="Handlers\Cursors\MouseCursorHandler.cs" />
+    <Compile Include="Handlers\Vectors\VectorHandler.cs" />
     <Compile Include="InputAction.cs" />
     <Compile Include="Handlers\Buttons\KeyHandler.cs" />
     <Compile Include="Handlers\Buttons\MouseButtonHandler.cs" />
-    <Compile Include="Handlers\Buttons\MouseButton.cs" />
+    <Compile Include="MouseButton.cs" />
     <Compile Include="Handlers\Buttons\PadButtonHandler.cs" />
     <Compile Include="IInputComposite.cs" />
     <Compile Include="Composites\InputSimultaneous.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Decorators\InputDecorator.cs" />
     <Compile Include="Handlers\InputHandler.cs" />
     <Compile Include="Composites\InputComposite.cs" />
+    <Compile Include="InputStates.cs" />
     <Compile Include="InputSource.cs" />
     <Compile Include="Composites\InputSet.cs" />
     <Compile Include="IInputHandler.cs" />
