Add ElapsedTime & Resolution singletons

--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Rectangle.Extension.cs" />
     <Compile Include="SpriteBatch.Extension.cs" />
     <Compile Include="Texture2D.Extension.cs" />
+    <Compile Include="ElapsedTime.cs" />
     <Compile Include="Transition.Extension.cs" />
     <Compile Include="Vector2.Extension.cs" />
     <Compile Include="Vector3.Extension.cs" />
