--- a/Glyph.Effects/Glyph.Effects.csproj
+++ b/Glyph.Effects/Glyph.Effects.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{618DD39A-686C-4B91-BB24-BD9334109335}</ProjectGuid>
+    <ProjectGuid>{C1E7FE9C-0D98-4F1C-A6B2-11DFDB431F8A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Glyph.Game</RootNamespace>
-    <AssemblyName>Glyph.Game</AssemblyName>
+    <RootNamespace>Glyph.Effects</RootNamespace>
+    <AssemblyName>Glyph.Effects</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -17,58 +17,42 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;WINDOWS</DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Windows|AnyCPU'">
-    <OutputPath>bin\Windows\</OutputPath>
-    <DefineConstants>TRACE;WINDOWS</DefineConstants>
-    <Optimize>true</Optimize>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Windows|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MonoGame.Framework">
-      <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
-    </Reference>
-    <Reference Include="NLog">
-      <HintPath>..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
-    </Reference>
+    <Reference Include="MonoGame.Framework, Version=3.3.0.2238, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GlyphGame.cs" />
-    <Compile Include="IGameMode.cs" />
+    <Compile Include="EffectComponent.cs" />
+    <Compile Include="EffectComposite.cs" />
+    <Compile Include="EffectSynthesizer.cs" />
+    <Compile Include="IEffect.cs" />
+    <Compile Include="IEffectComposite.cs" />
+    <Compile Include="IEffectSynthesizer.cs" />
+    <Compile Include="Masked\MaskedEffect.cs" />
+    <Compile Include="Masked\MaskPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ModeManager.cs" />
+    <Compile Include="ScreenEffectManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\External\Diese\Diese.Composition\Diese.Composition.csproj">
       <Project>{E8D6F663-89A6-497F-A02F-D0FC562D2D0E}</Project>
       <Name>Diese.Composition</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Glyph.Audio\Glyph.Audio.csproj">
-      <Project>{46aa8a4b-5a43-45f3-99e4-b7bad0d47fea}</Project>
-      <Name>Glyph.Audio</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Glyph.Effects\Glyph.Effects.csproj">
-      <Project>{C1E7FE9C-0D98-4F1C-A6B2-11DFDB431F8A}</Project>
-      <Name>Glyph.Effects</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Glyph.Input\Glyph.Input.csproj">
-      <Project>{C0D6FD93-B1EB-4877-8125-A69BC3C2795A}</Project>
-      <Name>Glyph.Input</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Glyph.Tools\Glyph.Tools.csproj">
-      <Project>{6692F3F4-E1EA-4D53-B0A1-2DBA67414FC2}</Project>
-      <Name>Glyph.Tools</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
-      <Project>{457cbbf3-26c7-478b-b4eb-1f85ff3c07f5}</Project>
+      <Project>{457CBBF3-26C7-478B-B4EB-1F85FF3C07F5}</Project>
       <Name>Glyph</Name>
     </ProjectReference>
   </ItemGroup>
