--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -59,6 +59,7 @@
     <Compile Include="IGlyphEntity.cs" />
     <Compile Include="IHandleInput.cs" />
     <Compile Include="ILoadContent.cs" />
+    <Compile Include="ITimeUnscalable.cs" />
     <Compile Include="IUpdate.cs" />
     <Compile Include="DependencyGraph.cs" />
     <Compile Include="Point.Extension.cs" />
