--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -49,14 +49,17 @@
     <Compile Include="Axis.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Checkpoint.cs" />
-    <Compile Include="DependencyAttribute.cs" />
     <Compile Include="Exceptions\CyclicDependencyException.cs" />
     <Compile Include="Exceptions\GlyphException.cs" />
+    <Compile Include="Exceptions\SingleComponentException.cs" />
+    <Compile Include="GlyphComponent.cs" />
     <Compile Include="GlyphEntity.cs" />
+    <Compile Include="GlyphUpdateBase.cs" />
+    <Compile Include="IDependencyProvider.cs" />
+    <Compile Include="IDependent.cs" />
     <Compile Include="IGlyphComponent.cs" />
     <Compile Include="IDraw.cs" />
     <Compile Include="IGlyphComposite.cs" />
-    <Compile Include="IGlyphEntity.cs" />
     <Compile Include="IHandleInput.cs" />
     <Compile Include="ILoadContent.cs" />
     <Compile Include="ITimeUnscalable.cs" />
@@ -64,6 +67,7 @@
     <Compile Include="DependencyGraph.cs" />
     <Compile Include="Point.Extension.cs" />
     <Compile Include="Rectangle.Extension.cs" />
+    <Compile Include="SinglePerParentAttribute.cs" />
     <Compile Include="SpriteBatch.Extension.cs" />
     <Compile Include="Texture2D.Extension.cs" />
     <Compile Include="ElapsedTime.cs" />
