Add IEnableable, remove generic on IDependent & IDependencyProvider and clean other Glyph interfaces

--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -58,6 +58,7 @@
     <Compile Include="GlyphUpdateBase.cs" />
     <Compile Include="IDependencyProvider.cs" />
     <Compile Include="IDependent.cs" />
+    <Compile Include="IEnableable.cs" />
     <Compile Include="IGlyphComponent.cs" />
     <Compile Include="IDraw.cs" />
     <Compile Include="IGlyphComposite.cs" />
