--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Exceptions\GlyphException.cs" />
     <Compile Include="Exceptions\SingleComponentException.cs" />
     <Compile Include="GlyphComponent.cs" />
+    <Compile Include="GlyphComposite.cs" />
+    <Compile Include="GlyphContainer.cs" />
     <Compile Include="GlyphObject.cs" />
     <Compile Include="GameObject2D.cs" />
     <Compile Include="GlyphUpdateBase.cs" />
@@ -62,6 +64,9 @@
     <Compile Include="IGlyphComponent.cs" />
     <Compile Include="IDraw.cs" />
     <Compile Include="IGlyphComposite.cs" />
+    <Compile Include="IGlyphContainer.cs" />
+    <Compile Include="IGlyphEnumerable.cs" />
+    <Compile Include="IGlyphParent.cs" />
     <Compile Include="IHandleInput.cs" />
     <Compile Include="ILoadContent.cs" />
     <Compile Include="ITimeUnscalable.cs" />
