--- a/Glyph.Composition/Glyph.Composition.csproj
+++ b/Glyph.Composition/Glyph.Composition.csproj
@@ -43,7 +43,8 @@
     <Compile Include="GlyphComponent.cs" />
     <Compile Include="GlyphComposite.cs" />
     <Compile Include="GlyphContainer.cs" />
-    <Compile Include="Scheduler\Base\DependencyGraph.cs" />
+    <Compile Include="Scheduler\Base\SchedulerGraph.cs" />
+    <Compile Include="Scheduler\Base\ISchedulerProfile.cs" />
     <Compile Include="Scheduler\Base\Priority.cs" />
     <Compile Include="Scheduler\Base\Scheduler.cs" />
     <Compile Include="GlyphObject.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="IUpdate.cs" />
     <Compile Include="Delegates\LoadContentDelegate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scheduler\Base\SchedulerProfile.cs" />
     <Compile Include="Scheduler\Base\TopologicalOrderVisitor.cs" />
     <Compile Include="Scheduler\GlyphObjectScheduler.cs" />
     <Compile Include="Scheduler\GlyphScheduler.cs" />
